<resources>
    <string name="app_name">FirstApp</string>
    <string name="maleicon">maleicon</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">mujer</string>
    <string name="femaleicon">femaleicon</string>
    <string name="altura">Altura</string>
    <string name="valorAltura">120 cm</string>
    <string name="peso">peso</string>
    <string name="edad">edad</string>
    <string name="peso_text">%1$d kg</string>
    <string name="edad_text">%1$d años</string>
    <string name="ValorEdad">18 años</string>
    <string name="menosEdad">menosEdad</string>
    <string name="masEdad">masEdad</string>
    <string name="txtValPeso">50 kg</string>
    <string name="menosPeso">menosPeso</string>
    <string name="masPeso">masPeso</string>
    <string name="calcular">Calcular</string>
    <string name="txtIMC">Tu IMC</string>
    <string name="txtResultado">resultado</string>

    <!--    Lista App-->
    <string name="titulo_lista_app">Lista de Tareas</string>
    <string name="txtPrueba">Prueba</string>
    <string name="txtCategorias">categorías</string>
    <string name="txtTareas">Tareas</string>
    <string name="add">add</string>
    <string name="hintTxt">Añade la tarea</string>
    <string name="labelRadioBusiness">Negocios</string>
    <string name="labelRadioPersonal">Personal</string>
    <string name="labelRadioOtros">Otros</string>
    <string name="btnName">Guardar</string>
    <string name="msgToast">Por favor escribe una tarea</string>
</resources>